--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
       <h1 class="visually-hidden">Просторный тренажерный зал площадью 900 кв/м</h1>
       <div class="header__container container">
         <a href="#"><img src="img/main-logo.png" alt="" srcset="img/main-logo@2x.png" width="120" height="26"></a>
-        <a href="tel: 8-800-555-55-55">8-800-555-55-55</a>
+        <a href="tel:8-800-555-55-55">8-800-555-55-55</a>
       </div>
     </header>
     <main>
@@ -167,7 +167,7 @@
                 srcset="img/games-picture-tablet.webp 1x, img/games-picture-tablet@2x.webp 2x">
               <source type="image/webp" media="(max-width: 1365px)"
                 srcset="img/games-picture-tablet.png 1x, img/games-picture-tablet@2x.png 2x">
-              <img src="img/games-picture-desktop.png" widht="660" height="500"
+              <img src="img/games-picture-desktop.png" width="660" height="500"
                 srcset="img/games-picture-desktop@2x.png 2x" alt="">
             </picture>
           </div>
@@ -306,53 +306,56 @@
 
       <section class="advantages">
         <div class="advantages__container container">
-          <h2 class="advantages__title">Наши Преимущества</h2>
-          <ul class="advantages__list">
-            <li class="advantages__item">
+          <h2>Наши Преимущества</h2>
+          <ul>
+            <li>
               <div class="advantages__count-wrapper">
-                <span class="advantages__count">900</span>
-                <span class="advantages__sub-count">кв/м</span>
+                <span>900</span>
+                <span>кв/м</span>
               </div>
               <div class="advantages__text-wrapper">
-                <h4 class="advantages__item-title">Площадь</h4>
-                <p class="advantages__description">Занимайтесь без очередей и толкучки</p>
+                <h4>Площадь</h4>
+                <p>Занимайтесь без очередей и толкучки</p>
               </div>
             </li>
-            <li class="advantages__item">
+            <li>
               <div class="advantages__count-wrapper">
-                <span class="advantages__count">350</span>
-                <span class="advantages__sub-count">мест</span>
+                <span>70</span>
+                <span>машин</span>
               </div>
               <div class="advantages__text-wrapper">
-                <h4 class="advantages__item-title">Комфорт</h4>
-                <p class="advantages__description">Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+                <h4>Собственная парковка</h4>
+                <p>Вы всегда найдете место для своей машины на нашей парковке</p>
               </div>
             </li>
-            <li class="advantages__item advantages__item--element">
-              <span class="advantages__element-count">100</span>
-              <div class="advantages__element-wrapper">
-                <span class="advantages__element-text">Тренажеров</span>
-                <p class="advantages__element-description">Современные тренажеры на все группы мышц</p>
+            <li>
+              <div class="advantages__sub-container">
+                <ul>
+                  <li>
+                    <span>100</span>
+                    <span>Тренажеров</span>
+                    <p>Современные тренажеры на все группы мышц</p>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li class="advantages__item">
+            <li>
               <div class="advantages__count-wrapper">
-                <span class="advantages__count">70</span>
-                <span class="advantages__sub-count">машин</span>
+                <span>350</span>
+                <span>мест</span>
               </div>
               <div class="advantages__text-wrapper">
-                <h4 class="advantages__item-title">Собственная парковка</h4>
-                <p class="advantages__description">Вы всегда найдете место для своей машины на нашей парковке</p>
-              </div>
+                <h4>Комфорт</h4>
+                <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
             </li>
-            <li class="advantages__item">
+            <li>
               <div class="advantages__count-wrapper">
-                <span class="advantages__count">5+</span>
-                <span class="advantages__sub-count">лет</span>
+                <span>5+</span>
+                <span>лет</span>
               </div>
               <div class="advantages__text-wrapper">
-                <h4 class="advantages__item-title">Тренерский опыт</h4>
-                <p class="advantages__description">Добивайтесь своих целей быстрее с профессиональным тренером</p>
+                <h4>Тренерский опыт</h4>
+                <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
               </div>
             </li>
           </ul>
