--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,8 @@
             <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для
               укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для
               всех
-              спортсменов.
+              спортсменов.</p>
+            <p>
               В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре
               есть
               несколько оборудованных залов для различных видов групповых занятий. </p>
@@ -330,13 +331,9 @@
             </li>
             <li>
               <div class="advantages__sub-container">
-                <ul>
-                  <li>
-                    <span>100</span>
-                    <span>Тренажеров</span>
-                    <p>Современные тренажеры на все группы мышц</p>
-                  </li>
-                </ul>
+                <span>100</span>
+                <span>Тренажеров</span>
+                <p>Современные тренажеры на все группы мышц</p>
               </div>
             </li>
             <li>
@@ -347,6 +344,7 @@
               <div class="advantages__text-wrapper">
                 <h4>Комфорт</h4>
                 <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+              </div>
             </li>
             <li>
               <div class="advantages__count-wrapper">
@@ -359,6 +357,44 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="promo">
+        <h2>Акции</h2>
+        <div class="promo__container container">
+          <div class="promo__wrapper">
+            <div class="text__wrapper">
+              <h4>Год</h4>
+              <span>4999</span>
+              <p>Безлимитный абонемент в тренажерный зал</p>
+              <button class="promo__button promo__button--white button">подробнее</button>
+            </div>
+            <picture>
+              <source type="image/webp" media="(max-width: 767px)"
+                srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
+              <source type="image/webp" media="(max-width: 767px)"
+                srcset="img/promo-image-mobile.png 1x, img/promo-image-mobile@2x.png 2x">
+              <source type="image/webp" media="(max-width: 1365px)"
+                srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x">
+              <source type="image/webp" media="(max-width: 1365px)"
+                srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x">
+              <img src="img/promo-image-desktop.png" srcset="img/promo-image-desktop.png 2x" width="280" height="462"
+                alt="">
+            </picture>
+          </div>
+          <div class="promo__offer-wrapper">
+            <div class="promo__offer">
+              <h4>Месяц бесплатно</h4>
+              <p>Приведи друга, получи абонемент в подарок</p>
+              <button class="promo__button promo__button--dark button">подробнее</button>
+            </div>
+            <div class="promo__offer">
+              <h4>Скидка 20%</h4>
+              <p>Корпоративный фитнес с командой</p>
+              <button class="promo__button promo__button--dark button">подробнее</button>
+            </div>
+          </div>
         </div>
       </section>
 
