--- a/source/index.html
+++ b/source/index.html
@@ -35,14 +35,14 @@
   <div class="container">
     <header class="header">
       <h1 class="visually-hidden">Просторный тренажерный зал площадью 900 кв/м</h1>
-      <div class="header__container container">
+      <div class="header__container">
         <a href="#"><img src="img/main-logo.png" alt="" srcset="img/main-logo@2x.png" width="120" height="26"></a>
         <a href="tel:8-800-555-55-55">8-800-555-55-55</a>
       </div>
     </header>
     <main>
       <section class="intro">
-        <div class="intro__container">
+        <div class="intro__container container">
           <div class="intro__text-wrapper">
             <p>Омск</p>
             <ul>
@@ -64,7 +64,7 @@
         </div>
       </section>
       <section class="about">
-        <div class="about__container">
+        <div class="about__container container">
           <div class="about__text-wrapper">
             <h2>Тренажерный зал</h2>
             <h3>Просторный зал площадью 900 кв/м</h3>
@@ -102,47 +102,47 @@
 
       <section class="subscription">
         <div class="subscription__container container">
-          <h2 class="subscription__title tabs">Абонементы</h2>
-          <div class="tabs">
-            <div class="tabs__controls" data-tabs="controls">
-              <button class="tabs__control button" type="button" data-period="1">1 месяц</button>
-              <button class="tabs__control button" type="button" data-period="6">6 месяцев</button>
-              <button class="tabs__control button" type="button" data-period="12">12 месяцев</button>
+          <h2 class="subscription__title">Абонементы</h2>
+          <div class="subscription__tabs">
+            <div class="subscription__tabs-controls" data-tabs="controls">
+              <button class="subscription__tabs-control button" type="button">1 месяц</button>
+              <button class="subscription__tabs-control button" type="button">6 месяцев</button>
+              <button class="subscription__tabs-control button" type="button" >12 месяцев</button>
             </div>
             <ul>
               <li>
                 <h4>С тренером</h4>
                 <p>12 занятий</p>
-                <div class="tabs__price-wrapper">
+                <div class="subscription__price-wrapper">
                   <span>5000</span>
                   <span>5000</span>
                 </div>
-                <button class="tabs__button button" type="button">Купить абонемент</button>
+                <button class="subscription__button button" type="button">Купить абонемент</button>
               </li>
               <li class="is-selected">
                 <h4>Дневной</h4>
                 <p>с 8:00 до 17:00</p>
-                <div class="tabs__price-wrapper">
+                <div class="subscription__price-wrapper">
                   <span>1700</span>
                   <span>1700</span>
                 </div>
-                <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
+                <button class="subscription__button subscription__button--is-selected button" type="button">Купить абонемент</button>
               </li>
               <li>
                 <h4>Полный день</h4>
                 <p>с 8:00 до 22:00 </p>
-                <div class="tabs__price-wrapper">
+                <div class="subscription__price-wrapper">
                   <span>2700</span>
                   <span>2700</span>
                 </div>
-                <button class="tabs__button button" type="button">Купить абонемент</button>
+                <button class="subscription__button button" type="button">Купить абонемент</button>
               </li>
             </ul>
           </div>
         </div>
       </section>
       <section class="games">
-        <div class="games__container container"></div>
+        <div class="games__container container">
         <div class="games__wrapper">
           <div class="games__text-wrapper">
             <h2 class="games__title">Super Games</h2>
@@ -173,11 +173,12 @@
             </picture>
           </div>
         </div>
+      </div>
       </section>
 
       <section class="swiper-container">
         <h3 class="swiper-title">Жюри</h3>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <picture>
@@ -362,7 +363,7 @@
 
       <section class="promo">
         <h2>Акции</h2>
-        <div class="promo__container container">
+        <div class="promo__container">
           <div class="promo__wrapper">
             <div class="text__wrapper">
               <h4>Год</h4>
@@ -395,6 +396,21 @@
               <button class="promo__button promo__button--dark button">подробнее</button>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="faq">
+        <h2>Вопросы и ответы</h2>
+        <div class="faq__container container">
+          <div class="faq__tabs">
+            <div class="faq__tabs-controls" data-tabs="controls">
+              <button class="faq__tab-control button is-selected" type="button">Центр</button>
+              <button class="faq__tab-control button" type="button">Абонемент</button>
+              <button class="faq__tab-control button" type="button">Услуги</button>
+              <button class="faq__tab-control button" type="button">Правила</button>
+            </div>
+          </div>
+          <div class="faq__accordion"></div>
         </div>
       </section>
 
