--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Описание проекта">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
+  <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-300.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-500.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-600.woff2" as="font" type="font/woff2"
@@ -530,7 +532,43 @@
         </div>
       </section>
 
-      
+      <section class="reviews">
+        <div class="reviews__container container swiper">
+          <h2>Отзывы</h2>
+          <ul>
+            <li>
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
+                <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
+                  width="80" height="80">
+              </picture>
+              <div class="reviews__text-wrapper">
+                <h6>Анна Орлова</h6>
+                <p>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
+                  дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+              </div>
+            </li>
+            <li>
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
+                <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
+                  width="80" height="80">
+              </picture>
+              <div class="reviews__text-wrapper">
+                <h6>Алиса Михалкова</h6>
+                <p>Начала посещать supergym в начале года. Сначала было трудно, но сейчас, благодаря тренеру я стала
+                  собранней и выносливей!</p>
+              </div>
+            </li>
+        </div>
+      </section>
+
 
     </main>
     <footer>
