--- a/source/index.html
+++ b/source/index.html
@@ -179,10 +179,11 @@
         </div>
       </section>
 
-     <section class="juri-swiper"  data-swiper="juri-swiper">
-        <h2 class="swiper-title">Жюри</h2>
-          <div class="swiper" data-swiper="swiper">
-            <div class="swiper-wrapper" data-swiper="juri-wrapper">
+      <section class="juri-swiper">
+        <div class="juri-container container">
+          <h2>Жюри</h2>
+          <div class="swiper" data-swiper="juri">
+            <div class="swiper-wrapper">
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
@@ -201,13 +202,13 @@
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                    srcset="img/swiper-slide-2-mobile.webp 1x, img/swiper-slide-2-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    srcset="img/swiper-slide-2-mobile.png 1x, img/swiper-slide-2-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                    srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    srcset="img/swiper-slide-2-tablet.png 1x, img/swiper-slide-2-tablet@2x.png 2x">
                   <img class="swiper__image" src="img/swiper-slide-2-desktop.png" alt=""
                     srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
                 </picture>
@@ -216,13 +217,13 @@
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                    srcset="img/swiper-slide-3-mobile.webp 1x, img/swiper-slide-3-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    srcset="img/swiper-slide-3-mobile.png 1x, img/swiper-slide-3-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                    srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
                   <img class="swiper__image" src="img/swiper-slide-3-desktop.png" alt=""
                     srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
                 </picture>
@@ -231,13 +232,13 @@
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                    srcset="img/swiper-slide-4-mobile.webp 1x, img/swiper-slide-4-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    srcset="img/swiper-slide-4-mobile.png 1x, img/swiper-slide-4-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                    srcset="img/swiper-slide-4-tablet.webp 1x, img/swiper-slide-4-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
                   <img class="swiper__image" src="img/swiper-slide-4-desktop.png" alt=""
                     srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
                 </picture>
@@ -261,13 +262,13 @@
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                    srcset="img/swiper-slide-2-mobile.webp 1x, img/swiper-slide-2-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    srcset="img/swiper-slide-2-mobile.png 1x, img/swiper-slide-2-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                    srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    srcset="img/swiper-slide-2-tablet.png 1x, img/swiper-slide-2-tablet@2x.png 2x">
                   <img class="swiper__image" src="img/swiper-slide-2-desktop.png" alt=""
                     srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
                 </picture>
@@ -276,13 +277,13 @@
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                    srcset="img/swiper-slide-3-mobile.webp 1x, img/swiper-slide-3-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    srcset="img/swiper-slide-3-mobile.png 1x, img/swiper-slide-3-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                    srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
                   <img class="swiper__image" src="img/swiper-slide-3-desktop.png" alt=""
                     srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
                 </picture>
@@ -291,23 +292,48 @@
               <div class="swiper-slide juri-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                    srcset="img/swiper-slide-4-mobile.webp 1x, img/swiper-slide-4-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    srcset="img/swiper-slide-4-mobile.png 1x, img/swiper-slide-4-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                    srcset="img/swiper-slide-4-tablet.webp 1x, img/swiper-slide-4-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
                   <img class="swiper__image" src="img/swiper-slide-4-desktop.png" alt=""
                     srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
                 </picture>
                 <span class="swiper-name">Александра Костылева</span>
               </div>
             </div>
-            <div class="swiper-button-next" data-swiper="button-next"></div>
-            <div class="swiper-button-prev" data-swiper="button-prev"></div>
+            <div class="swiper-button-next" data-swiper="button-next">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="34" viewBox="0 0 18 34" fill="none">
+                <path d="M1 1L17 17L1 33" stroke="#102654" />
+              </svg>
+            </div>
+            <div class="swiper-button-prev" data-swiper="button-prev">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="42" viewBox="0 0 26 42" fill="none">
+                <g filter="url(#filter0_d_1_211)">
+                  <path d="M21 1L5 17L21 33" stroke="#102654" />
+                </g>
+                <defs>
+                  <filter id="filter0_d_1_211" x="0.292969" y="0.646484" width="25.0605" height="40.707"
+                    filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                      result="hardAlpha" />
+                    <feOffset dy="4" />
+                    <feGaussianBlur stdDeviation="2" />
+                    <feComposite in2="hardAlpha" operator="out" />
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_211" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_211" result="shape" />
+                  </filter>
+                </defs>
+              </svg>
+            </div>
           </div>
-      </section >
+        </div>
+      </section>
 
       <section class="advantages">
         <div class="advantages__container container">
@@ -532,51 +558,139 @@
         </div>
       </section>
 
-      <section class="reviews-swiper" data-swiper="reviews-swiper">
+      <section class="reviews-swiper">
         <div class="reviews-container container">
           <h2 class="swiper-title">Отзывы</h2>
-          <div class="swiper" data-swiper="swiper"> 
-          <div class="swiper-wrapper" data-swiper="reviews-wrapper">
-          <div class="swiper-slide reviews-slide">
-            <picture>
-              <source type="image/webp" media="(max-width: 767px)"
-                srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1365px)"
-                srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
-              <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
-                width="80" height="80">
-            </picture>
-            <div class="reviews-text-wrapper">
-              <h6>Анна Орлова</h6>
-              <p>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
-                дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+          <div class="swiper" data-swiper="review">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="reviews-slide">
+                  <picture>
+                    <source type="image/webp" media="(max-width: 767px)"
+                      srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
+                    <source type="image/webp" media="(max-width: 1365px)"
+                      srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
+                    <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
+                      width="80" height="80">
+                  </picture>
+                  <div class="reviews-text-wrapper">
+                    <h6>Анна Орлова</h6>
+                    <p>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют,
+                      персонал
+                      дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="reviews-slide">
+                  <picture>
+                    <source type="image/webp" media="(max-width: 767px)"
+                      srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
+                    <source type="image/webp" media="(max-width: 1365px)"
+                      srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
+                    <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
+                      width="80" height="80">
+                  </picture>
+                  <div class="reviews-text-wrapper">
+                    <h6>Алиса Михалкова</h6>
+                    <p>Начала посещать supergym в начале года. Сначала было трудно, но сейчас, благодаря тренеру я стала
+                      собранней и выносливей!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next" data-swiper="button-next">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="34" viewBox="0 0 18 34" fill="none">
+                <path d="M1 1L17 17L1 33" stroke="#102654" />
+              </svg>
+            </div>
+            <div class="swiper-button-prev" data-swiper="button-prev">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="42" viewBox="0 0 26 42" fill="none">
+                <g filter="url(#filter0_d_1_211)">
+                  <path d="M21 1L5 17L21 33" stroke="#102654" />
+                </g>
+                <defs>
+                  <filter id="filter0_d_1_211" x="0.292969" y="0.646484" width="25.0605" height="40.707"
+                    filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                      result="hardAlpha" />
+                    <feOffset dy="4" />
+                    <feGaussianBlur stdDeviation="2" />
+                    <feComposite in2="hardAlpha" operator="out" />
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_211" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_211" result="shape" />
+                  </filter>
+                </defs>
+              </svg>
             </div>
           </div>
-          <div class="swiper-slide reviews-slide">
-            <picture>
-              <source type="image/webp" media="(max-width: 767px)"
-                srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1365px)"
-                srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
-              <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
-                width="80" height="80">
-            </picture>
-            <div class="reviews-text-wrapper">
-              <h6>Алиса Михалкова</h6>
-              <p>Начала посещать supergym в начале года. Сначала было трудно, но сейчас, благодаря тренеру я стала
-                собранней и выносливей!</p>
-            </div>
-          </div>
-          <div class="swiper-button-next" data-swiper="button-next"></div>
-          <div class="swiper-button-prev" data-swiper="button-prev"></div>
-        </div>
-        </div>
-        </div>
       </section>
 
     </main>
     <footer>
-      <div class="container"></div>
+      <div class="footer__container container">
+        <h2 class="visually-hidden">Контактная информация</h2>
+        <form action="https://echo.htmlacademy.ru/" method="post" data-form-validate autocomplete="off">
+          <h3>Бесплатное занятие</h3>
+          <input type="text" name="name" required>
+          <input type="tel" name="phone" required data-validate-type="phone">
+          <button type="submit">Отправить</button>
+        </form>
+        <div class="footer__contacts">
+          <h3>Контакты</h3>
+          <div class="footer__text-wrapper">
+            <ul>
+              <li>
+                <h4>
+                  <p></p>
+                </h4>
+              </li>
+              <li>
+                <h4>
+                  <p></p>
+                </h4>
+              </li>
+              <li>
+                <h4>
+                  <p></p>
+                </h4>
+              </li>
+              <li>
+                <h4>
+                  <p></p>
+                </h4>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <nav class="footer__nav nav">
+          <span class="nav__title"></span>
+          <ul class="nav__user-list">
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <ul class="nav__socials-list">
+            <li><a href="">
+                <span class="visually-hidden"></span>
+              </a>
+            </li>
+            <li><a href="">
+                <span class="visually-hidden"></span>
+              </a>
+            </li>
+            <li><a href="">
+                <span class="visually-hidden"></span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+      </div>
     </footer>
   </div>
   <script src="js/vendor.min.js"></script>
