футер. секция с контактами

--- a/source/index.html
+++ b/source/index.html
@@ -640,35 +640,32 @@
               <span>ошибка</span>
             </label>
             <label>
-              <input class="footer__form-input" type="tel" name="phone" required placeholder="Номер телефона" data-validate-type="phone">
+              <input class="footer__form-input" type="tel" name="phone" required placeholder="Номер телефона"
+                data-validate-type="phone">
               <span>ошибка</span>
             </label>
           </div>
-          <button class="footer__form-button button"  type="submit">Отправить</button>
+          <button class="footer__form-button button" type="submit">Отправить</button>
         </form>
         <div class="footer__contacts contacts">
-          <h3 class="contacts__title">Контакты</h3>
+          <h3 class="contacts__header">Контакты</h3>
           <div class="contacts__text-wrapper">
             <ul class="contacts__list">
               <li class="contacts__item">
-                <h4 class="contacts__title">
-                  <p></p>
-                </h4>
+                <h4 class="contacts__title">Адрес:</h4>
+                <p class="contacts__description">г. Омск, ул. 60 лет Октября, 7</p>
               </li>
-              <li class="footer__contacts-item">
-                <h4>
-                  <p></p>
-                </h4>
-                <li class="footer__contacts-item">
-              <li>
-                <h4>
-                  <p></p>
-                </h4>
+              <li class="contacts__item">
+                <h4 class="contacts__title">Телефон:</h4>
+                <p class="contacts__description">8-800-555-55-55</p>
               </li>
-              <li class="footer__contacts-item">
-                <h4>
-                  <p></p>
-                </h4>
+              <li class="contacts__item">
+                <h4 class="contacts__title">График работы:</h4>
+                <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
+              </li>
+              <li class="contacts__item">
+                <h4 class="contacts__title">Email:</h4>
+                <p class="contacts__description">omsk@supergym.ru</p>
               </li>
             </ul>
           </div>
