--- a/source/index.html
+++ b/source/index.html
@@ -671,25 +671,34 @@
           </div>
         </div>
         <nav class="footer__nav nav">
-          <span class="nav__title"></span>
+          <span class="nav__title">Supergym</span>
           <ul class="nav__user-list">
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li class="nav__user-item"><a class="nav__user-link" href="#">Услуги</a></li>
+            <li class="nav__user-item"><a class="nav__user-link" href="#">Абонементы</a></li>
+            <li class="nav__user-item"><a class="nav__user-link" href="#">Акции</a></li>
+            <li class="nav__user-item"><a class="nav__user-link" href="#">Тренеры</a></li>
+            <li class="nav__user-item"><a class="nav__user-link" href="#">Расписание</a></li>
           </ul>
-          <ul class="nav__socials-list">
-            <li><a href="">
-                <span class="visually-hidden"></span>
+          <ul class="nav__social-list">
+            <li class="nav__socials-item"><a class="nav__socials-link" href="#">
+                <span class="visually-hidden">Vkontakte.</span>
+                <svg class="nav__socials-icon" width="25" height="25">
+                  <use href="img/sprite/vk-logo.svg"></use>
+                </svg>
               </a>
             </li>
-            <li><a href="">
-                <span class="visually-hidden"></span>
+            <li class="nav__socials-item"><a class="nav__socials-link" href="#">
+                <span class="visually-hidden">Odnoklassniki.</span>
+                <svg class="nav__socials-icon" width="25" height="25">
+                  <use href="img/sprite/ok-logo.svg"></use>
+                </svg>
               </a>
             </li>
-            <li><a href="">
-                <span class="visually-hidden"></span>
+            <li class="nav__socials-item"><a class="nav__socials-link" href="#">
+                <span class="visually-hidden">Reddit.</span>
+                <svg class="nav__socials-icon" width="25" height="25">
+                  <use href="img/sprite/reddit-logo.svg"></use>
+                </svg>
               </a>
             </li>
           </ul>
