добавление кастомной кнопки для проигрывателя

--- a/source/index.html
+++ b/source/index.html
@@ -96,9 +96,11 @@
                 alt="">
             </picture>
             <div class="about__iframe-wrapper">
-              <iframe width="364" height="228" src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v"
-                title="Бесплатные интерактивные онлайн-курсы." loading="lazy"></iframe>
-                <button class="about__iframe-button button">Окрыть видео</button>
+              <iframe width="364" height="228"
+                src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v&controls=0"
+                title="Бесплатные интерактивные онлайн-курсы." loading="lazy">
+              </iframe>
+              <button class="about__iframe-button button">Окрыть видео</button>
             </div>
           </div>
         </div>
