--- a/source/index.html
+++ b/source/index.html
@@ -109,7 +109,7 @@
                   height="228">
               </picture>
               <iframe width="364" height="228"
-                src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v&controls=0"
+                src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v&?controls=0"
                 title="Бесплатные интерактивные онлайн-курсы." loading="lazy">
               </iframe>
               <button class="about__iframe-button button">
@@ -130,7 +130,7 @@
               <button class="subscription__tabs-control button" type="button">12 месяцев</button>
             </div>
             <ul>
-              <li>
+              <li tabindex="0">
                 <h4>С тренером</h4>
                 <p>12 занятий</p>
                 <span data-content="5000">5000
@@ -140,7 +140,7 @@
                 </span>
                 <button class="subscription__button button" type="button">Купить абонемент</button>
               </li>
-              <li>
+              <li tabindex="0">
                 <h4>Дневной</h4>
                 <p>с 8:00 до 17:00</p>
                 <span data-content="1700">1700 <svg width="30" height="42">
@@ -149,7 +149,7 @@
                 <button class="subscription__button button" type="button">Купить
                   абонемент</button>
               </li>
-              <li>
+              <li tabindex="0">
                 <h4>Полный день</h4>
                 <p>с 8:00 до 22:00 </p>
                 <span data-content="2700">2700 <svg width="30" height="42">
@@ -165,8 +165,7 @@
             srcset="img/weights-tablet.webp 1x, img/weights-tablet@2x.webp 2x">
           <source type="image/webp" media="(max-width: 1365px)"
             srcset="img/weights-tablet.png 1x, img/weights-tablet@2x.png 2x">
-          <img src="img/weights-desktop.png" alt="" srcset="img/weights-desktop@2x.png 2x" width="275"
-            height="328">
+          <img src="img/weights-desktop.png" alt="" srcset="img/weights-desktop@2x.png 2x" width="275" height="328">
         </picture>
       </section>
       <section class="games">
@@ -205,8 +204,13 @@
       </section>
 
       <section class="juri-swiper">
+        <h2 class="juri-title">Жюри</h2>
         <div class="juri-container container">
-          <h2>Жюри</h2>
+          <div class="swiper-button-next" data-swiper="button-next">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="34" viewBox="0 0 18 34" fill="none">
+              <path d="M1 1L17 17L1 33" stroke="#102654" />
+            </svg>
+          </div>
           <div class="swiper" data-swiper="juri">
             <div class="swiper-wrapper">
               <div class="swiper-slide juri-slide">
@@ -330,32 +334,27 @@
                 <span class="swiper-name">Александра Костылева</span>
               </div>
             </div>
-            <div class="swiper-button-next" data-swiper="button-next">
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="34" viewBox="0 0 18 34" fill="none">
-                <path d="M1 1L17 17L1 33" stroke="#102654" />
-              </svg>
-            </div>
-            <div class="swiper-button-prev" data-swiper="button-prev">
-              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="42" viewBox="0 0 26 42" fill="none">
-                <g filter="url(#filter0_d_1_211)">
-                  <path d="M21 1L5 17L21 33" stroke="#102654" />
-                </g>
-                <defs>
-                  <filter id="filter0_d_1_211" x="0.292969" y="0.646484" width="25.0605" height="40.707"
-                    filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha" />
-                    <feOffset dy="4" />
-                    <feGaussianBlur stdDeviation="2" />
-                    <feComposite in2="hardAlpha" operator="out" />
-                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_211" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_211" result="shape" />
-                  </filter>
-                </defs>
-              </svg>
-            </div>
+          </div>
+          <div class="swiper-button-prev" data-swiper="button-prev">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="42" viewBox="0 0 26 42" fill="none">
+              <g filter="url(#filter0_d_1_211)">
+                <path d="M21 1L5 17L21 33" stroke="#102654" />
+              </g>
+              <defs>
+                <filter id="filter0_d_1_211" x="0.292969" y="0.646484" width="25.0605" height="40.707"
+                  filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                    result="hardAlpha" />
+                  <feOffset dy="4" />
+                  <feGaussianBlur stdDeviation="2" />
+                  <feComposite in2="hardAlpha" operator="out" />
+                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_211" />
+                  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_211" result="shape" />
+                </filter>
+              </defs>
+            </svg>
           </div>
         </div>
       </section>
