--- a/source/index.html
+++ b/source/index.html
@@ -206,11 +206,11 @@
       <section class="juri-swiper">
         <h2 class="juri-title">Жюри</h2>
         <div class="juri-container container">
-          <div class="swiper-button-next" data-swiper="button-next">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="34" viewBox="0 0 18 34" fill="none">
-              <path d="M1 1L17 17L1 33" stroke="#102654" />
+          <button class="swiper-button-prev button" data-swiper="button-prev">
+            <svg width="18" height="34">
+              <use href="img/sprite.svg#arrow"></use>
             </svg>
-          </div>
+          </button>
           <div class="swiper" data-swiper="juri">
             <div class="swiper-wrapper">
               <div class="swiper-slide juri-slide">
@@ -335,27 +335,12 @@
               </div>
             </div>
           </div>
-          <div class="swiper-button-prev" data-swiper="button-prev">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="42" viewBox="0 0 26 42" fill="none">
-              <g filter="url(#filter0_d_1_211)">
-                <path d="M21 1L5 17L21 33" stroke="#102654" />
-              </g>
-              <defs>
-                <filter id="filter0_d_1_211" x="0.292969" y="0.646484" width="25.0605" height="40.707"
-                  filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                    result="hardAlpha" />
-                  <feOffset dy="4" />
-                  <feGaussianBlur stdDeviation="2" />
-                  <feComposite in2="hardAlpha" operator="out" />
-                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
-                  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_211" />
-                  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_211" result="shape" />
-                </filter>
-              </defs>
+          <button class="swiper-button-next button" data-swiper="button-next">
+            <svg width="18" height="34">
+              <use href="img/sprite.svg#arrow"></use>
             </svg>
-          </div>
+          </button>
+
         </div>
       </section>
 
