провал с секцией преимуществ. требуется переделка

--- a/source/index.html
+++ b/source/index.html
@@ -417,8 +417,9 @@
       </section>
 
       <section class="advantages">
+        <h2>Наши Преимущества</h2>
         <div class="advantages__container container">
-          <h2>Наши Преимущества</h2>
+          <div class="advantages__list">
           <ul>
             <li>
               <div class="advantages__count-wrapper">
@@ -440,13 +441,16 @@
                 <p>Вы всегда найдете место для своей машины на нашей парковке</p>
               </div>
             </li>
-            <li>
-              <div class="advantages__sub-container">
+            </ul>
+          </div>
+              <div class="advantages__centered-item">
+                <ul>
                 <span>100</span>
                 <span>Тренажеров</span>
                 <p>Современные тренажеры на все группы мышц</p>
               </div>
-            </li>
+              <div class="advantages__list">
+                <ul>
             <li>
               <div class="advantages__count-wrapper">
                 <span>350</span>
@@ -468,6 +472,7 @@
               </div>
             </li>
           </ul>
+        </div>
         </div>
       </section>
 
