--- a/source/index.html
+++ b/source/index.html
@@ -417,9 +417,8 @@
       </section>
 
       <section class="advantages">
-        <h2>Наши Преимущества</h2>
         <div class="advantages__container container">
-          <div class="advantages__list">
+          <h2>Наши Преимущества</h2>
           <ul>
             <li>
               <div class="advantages__count-wrapper">
@@ -441,16 +440,13 @@
                 <p>Вы всегда найдете место для своей машины на нашей парковке</p>
               </div>
             </li>
-            </ul>
-          </div>
+            <li data-element="center">
               <div class="advantages__centered-item">
-                <ul>
                 <span>100</span>
                 <span>Тренажеров</span>
                 <p>Современные тренажеры на все группы мышц</p>
               </div>
-              <div class="advantages__list">
-                <ul>
+            </li>
             <li>
               <div class="advantages__count-wrapper">
                 <span>350</span>
@@ -472,7 +468,6 @@
               </div>
             </li>
           </ul>
-        </div>
         </div>
       </section>
 
